--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/warehouse.png" />
+    <link rel="icon" type="image/svg+xml" href="/src/image/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ERŠ LanParty2025</title>
   </head>
